fix Long titles don't break in TOC, Chapter Opener #2043

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -2641,6 +2641,7 @@ div.book div.preface > div.section > div.section > div.titlepage > div > div > h
   color: #2F7E9E;
   margin-bottom: 15.6px;
   font-size: 16px;
+  width: 90%;
 }
 .book > .toc .toc-chapter > .target-chapter::before {
   display: none;
@@ -2821,8 +2822,11 @@ div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-n {
 }
 div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-t {
   position: absolute;
-  bottom: 35px;
+  bottom: -10px;
   left: 80px;
+  width: 60%;
+  height: 70px;
+  white-space: normal;
 }
 div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-t::before {
   content: "| ";
@@ -5524,6 +5528,10 @@ div.table table thead tr:last-of-type th:first-child {
 }
 div.table table thead tr:last-of-type th:last-child {
   border-top-right-radius: 2.88px;
+}
+.book > .toc .toc-chapter .cnx-gentext-chapter.cnx-gentext-t {
+  float: left;
+  max-width: 90%;
 }
 .book > .toc > ul > li.toc-appendix > a.target-appendix::before {
   display: none;
