--- a/css/refactor/astronomy-skeleton.less
+++ b/css/refactor/astronomy-skeleton.less
@@ -272,6 +272,10 @@ div.table table {
   }
 }
 
+.book > .toc .toc-chapter .cnx-gentext-chapter.cnx-gentext-t {
+  #content>#link>.text('chapter'; any; toc);
+}
+
 .book > .toc > ul > li.toc-appendix > a.target-appendix::before {
   #part>#toc>#chapter>.number('appendix'; any; toc);
 }
