--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -152,9 +152,6 @@
         top: 0;
         left: 0;
         right: 0;
-        //bottom: -3.4in;
-        //left: 80px;
-        //right: 0;
         width: 8.5in;
         height: 3.53in;
         color: @tertiary-color;
@@ -173,8 +170,11 @@
       }
       .text() {
         position: absolute;
-        bottom: 35px;
+        bottom: -10px;
         left: 80px;
+        width: 60%;
+        height: 70px;
+        white-space: normal;
       }
       .icon() {
         content: '';
@@ -639,6 +639,11 @@
       color: @primary-color;
       .scale-padding(1, margin-bottom);
       font-size: 16px;
+      width: 90%;
+    }
+    .text('chapter'; any; toc) {
+      float: left;
+      max-width: 90%;
     }
     .style('preface'; any; toc) {
       color: @primary-color;
